<resources>
    <string name="app_name">UserInfoModule</string>
    <!--用户登录-->
    <string name="login_et_err_usename">请输入账号</string>
    <string name="login_et_err_pwd">请输入密码</string>
    <!-- 修改密码页面 -->
    <string name="modify_password_old">请输入原密码</string>
    <string name="modify_password_new">请设置新密码</string>
    <string name="modify_password_again">请再次输入新密码</string>
    <string name="modify_password_note">密码8到20位，至少包含字母和数字</string>
    <string name="modify_password_sure">确认</string>
    <string name="modify_password_tishi">请输入密码</string>
    <string name="modify_password_out">新密码与确认密码输入不一致</string>
</resources>
