<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="@color/common_back"
              android:orientation="vertical"
>
    <include layout="@layout/common_base_custom_actionbar_layout"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">
        <!--原密码 -->
        <com.app.common.CustomView.ClearEditText
            android:id="@+id/modify_password_old"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modify_password_old"
            android:inputType="textPassword"
            android:maxLength="20"
        />
        <com.app.common.CustomView.ClearEditText
            android:id="@+id/modify_password_new"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modify_password_new"
            android:inputType="textPassword"
            android:maxLength="20"
        />
        <com.app.common.CustomView.ClearEditText
            android:id="@+id/modify_password_again"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modify_password_again"
            android:inputType="textPassword"
            android:maxLength="20"
        />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_password_note"
        android:padding="15dip"
        android:textColor="@color/account_text_gray"
        android:textSize="@dimen/x11"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical"
        android:padding="20dip">
        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rv_type="rectangle"
            app:rv_zoom="true">
            <Button
                android:id="@+id/modify_password_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/modify_password_sure"
                android:textColor="@color/white"
                android:textSize="@dimen/x14"/>
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>